@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Five or More
 _Comment=Remove colored balls from the board by forming lines
 Exec=glines
-Icon=glines.png
+Icon=gnome-five-or-more
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;LogicGame;
